--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -23,7 +23,7 @@ jobs:
           if: ${{ github.ref == 'refs/heads/master' }}
           uses: peaceiris/actions-gh-pages@v3.6.1
           with:
-            github_token: ${{ secrets.PUBLISH_TOKEN }}
+            github_token: ${{ secrets.GITHUB_TOKEN }}
             publish_branch: gh-pages
             publish_dir: bin/Release/netstandard2.1/publish/wwwroot
             allow_empty_commit: false
