--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -17,7 +17,7 @@ jobs:
           run: dotnet test
 
         - name: Generate website
-          run: dotnet publish Portfolio/Portfolio.csproj --configuration Release
+          run: dotnet publish Portfolio/Portfolio.csproj --configuration Release --output build
 
         - name: Publish website
           if: ${{ github.ref == 'refs/heads/master' }}
@@ -26,7 +26,7 @@ jobs:
             ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
             BASE_BRANCH: master
             BRANCH: gh-pages
-            FOLDER: bin/Release/netstandard2.1/wwwroot
+            FOLDER: build/wwwroot
             SINGLE_COMMIT: true
             
         - name: Fix 404 page
