--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -22,6 +22,9 @@ jobs:
         - name: Fix 404 page
           run: cp build/wwwroot/index.html build/wwwroot/404.html
           
+        - name: Fix base tag
+          run: sed -i 's/<base href="\/" \/>/<base href="\/Internship3\/" \/>/g' release/wwwroot/index.html
+          
         - name: Fix Jekyll conflict
           run: touch build/wwwroot/.nojekyll
 
