--- a/Portfolio/Portfolio.csproj
+++ b/Portfolio/Portfolio.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Pages\Content\Stage3\Evidence\3.md" />
     <None Remove="wwwroot\Assets\Cursus.PNG" />
     <None Remove="Pages\Content\Stage3\Index.md" />
     <None Remove="Pages\Content\Stage3\Leerdoelen\1.md" />
@@ -22,6 +23,10 @@
     <None Remove="Pages\Content\Stage3\Leerdoelen\7.md" />
     <None Remove="Pages\Content\Stage3\Leerdoelen\8.md" />
     <None Remove="Pages\Content\Stage3\Leerdoelen\9.md" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Pages\Content\Stage3\Evidence\3.md" />
   </ItemGroup>
 
   <ItemGroup>
