--- a/Portfolio/Portfolio.csproj
+++ b/Portfolio/Portfolio.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <None Remove="Pages\Content\Stage3\Evidence\3.md" />
     <None Remove="Pages\Content\Stage3\Evidence\4.md" />
+    <None Remove="Pages\Content\Stage3\Evidence\6.md" />
     <None Remove="wwwroot\Assets\Cursus.PNG" />
     <None Remove="Pages\Content\Stage3\Index.md" />
     <None Remove="Pages\Content\Stage3\Leerdoelen\1.md" />
@@ -29,6 +30,7 @@
   <ItemGroup>
     <EmbeddedResource Include="Pages\Content\Stage3\Evidence\3.md" />
     <EmbeddedResource Include="Pages\Content\Stage3\Evidence\4.md" />
+    <EmbeddedResource Include="Pages\Content\Stage3\Evidence\6.md" />
   </ItemGroup>
 
   <ItemGroup>
