--- a/Portfolio/Portfolio.csproj
+++ b/Portfolio/Portfolio.csproj
@@ -13,6 +13,7 @@
     <None Remove="Pages\Content\Stage3\Bewijsmateriaal\3.md" />
     <None Remove="Pages\Content\Stage3\Bewijsmateriaal\4.md" />
     <None Remove="Pages\Content\Stage3\Bewijsmateriaal\6.md" />
+    <None Remove="Pages\Content\Stage3\Stageopdracht.md" />
     <None Remove="Pages\Content\Stage3\Stageplan.md" />
     <None Remove="Pages\Content\Studies.md" />
     <None Remove="Pages\Content\Test.md" />
@@ -32,6 +33,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Pages\Content\Stage3\Stageopdracht.md" />
     <EmbeddedResource Include="Pages\Content\Stage3\Stageplan.md" />
     <EmbeddedResource Include="Pages\Content\Studies.md" />
   </ItemGroup>
@@ -63,10 +65,10 @@
   </ItemGroup>
 	
 	<ItemGroup>
-    <PackageReference Include="Markdig" Version="0.22.0" />
-    <PackageReference Include="MatBlazor" Version="2.7.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.0" PrivateAssets="all" />
+    <PackageReference Include="Markdig" Version="0.22.1" />
+    <PackageReference Include="MatBlazor" Version="2.8.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.1" PrivateAssets="all" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
   </ItemGroup>
