Port & update old portfolio content from wordpress website. Update dependencies Fix navbar selection

--- a/Portfolio/Portfolio.csproj
+++ b/Portfolio/Portfolio.csproj
@@ -10,6 +10,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Pages\Content\INFANA_C4\Index.md" />
+    <None Remove="Pages\Content\INFANA_PLS\Index.md" />
+    <None Remove="Pages\Content\INFProjectA\Index.md" />
+    <None Remove="Pages\Content\INFProjectB\Index.md" />
+    <None Remove="Pages\Content\INFProjectC\Index.md" />
+    <None Remove="Pages\Content\INFProjectD\Index.md" />
+    <None Remove="Pages\Content\MISC_WoM\Index.md" />
     <None Remove="Pages\Content\Stage3\Bewijsmateriaal\3.md" />
     <None Remove="Pages\Content\Stage3\Bewijsmateriaal\4.md" />
     <None Remove="Pages\Content\Stage3\Bewijsmateriaal\7.md" />
@@ -33,6 +40,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Pages\Content\INFANA_C4\Index.md" />
+    <EmbeddedResource Include="Pages\Content\INFANA_PLS\Index.md" />
+    <EmbeddedResource Include="Pages\Content\INFProjectA\Index.md" />
+    <EmbeddedResource Include="Pages\Content\INFProjectB\Index.md" />
+    <EmbeddedResource Include="Pages\Content\INFProjectC\Index.md" />
+    <EmbeddedResource Include="Pages\Content\INFProjectD\Index.md" />
+    <EmbeddedResource Include="Pages\Content\MISC_WoM\Index.md" />
     <EmbeddedResource Include="Pages\Content\Stage3\Bewijsmateriaal\7.md" />
     <EmbeddedResource Include="Pages\Content\Stage3\Stageopdracht.md" />
     <EmbeddedResource Include="Pages\Content\Stage3\Stageplan.md" />
@@ -64,11 +78,11 @@
   </ItemGroup>
 	
 	<ItemGroup>
-    <PackageReference Include="Markdig" Version="0.23.0" />
+    <PackageReference Include="Markdig" Version="0.25.0" />
     <PackageReference Include="MatBlazor" Version="2.8.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.4" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.4" PrivateAssets="all" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.7" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.7" PrivateAssets="all" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
   </ItemGroup>
 
